# ProSeg_GUI

./: .dockerignore  .gitignore  docker-compose.yml  main.py  pyproject.toml
app/: Dockerfile  main.py  medsam2_inference.py  my_test.py  postprocess.py  requirements.txt  test_fastapi.py  test_pna.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.ts
frontend/src/: index.css
frontend/src/components/: ClassTogglePanel.tsx  FileUpload.tsx  SliceSlider.tsx  SliceViewer.tsx  Volume3DViewer.tsx
frontend/src/lib/: dicomParser.ts  inferenceApi.ts
frontend/src/pages/: Index.tsx
frontend/src/types/: segmentation.ts
