[project]
name = "proseg-gui"
version = "0.1.0"
description = "ProSeg GUI backend and frontend workspace"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "hydra-core>=1.3.2",
    "matplotlib>=3.10.8",
    "numpy>=1.26.4",
    "omegaconf>=2.3.0",
    "opencv-python-headless>=4.10.0.84",
    "pillow>=11.1.0",
    "pydicom>=3.0.1",
    "pynrrd>=1.1.3",
    "python-multipart>=0.0.20",
    "sam2>=1.1.0",
    "scipy>=1.13.1",
    "simpleitk>=2.5.3",
    "transformers>=4.53.1",
    "ultralytics>=8.3.0",
]

[project.optional-dependencies]
cpu = [
    "torch==2.6.0",
    "torchaudio==2.6.0",
    "torchvision==0.21.0",
]
cu124 = [
    "torch==2.6.0",
    "torchaudio==2.6.0",
    "torchvision==0.21.0",
]

[tool.uv]
package = false
conflicts = [[{ extra = "cpu" }, { extra = "cu124" }]]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu124", extra = "cu124" },
]
torchaudio = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu124", extra = "cu124" },
]
torchvision = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu124", extra = "cu124" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
